[gd_scene load_steps=2 format=3 uid="uid://tn0ssayl7wum"]

[ext_resource type="Script" path="res://Scripts/Views/SqlTutorialView.gd" id="1_8utaq"]

[node name="SqlLiteTest" type="CanvasLayer"]

[node name="SQLiteTest" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8utaq")

[node name="CreateTable" type="Button" parent="SQLiteTest"]
layout_mode = 0
offset_left = 69.0
offset_top = 112.0
offset_right = 281.0
offset_bottom = 189.0
text = "Create Table
"

[node name="InsertData" type="Button" parent="SQLiteTest"]
layout_mode = 0
offset_left = 61.0
offset_top = 240.0
offset_right = 273.0
offset_bottom = 317.0
text = "Insert Data
"

[node name="SelectData" type="Button" parent="SQLiteTest"]
layout_mode = 0
offset_left = 65.0
offset_top = 359.0
offset_right = 277.0
offset_bottom = 436.0
text = "Select Data
"

[node name="UpdateData" type="Button" parent="SQLiteTest"]
layout_mode = 0
offset_left = 71.0
offset_top = 484.0
offset_right = 283.0
offset_bottom = 561.0
text = "Upodate Data
"

[node name="DeleteData" type="Button" parent="SQLiteTest"]
layout_mode = 0
offset_left = 69.0
offset_top = 603.0
offset_right = 281.0
offset_bottom = 680.0
text = "Delete Data
"

[node name="CustomSelect" type="Button" parent="SQLiteTest"]
layout_mode = 0
offset_left = 68.0
offset_top = 718.0
offset_right = 280.0
offset_bottom = 795.0
text = "Custom Select"

[node name="Name" type="Label" parent="SQLiteTest"]
layout_mode = 0
offset_left = 463.0
offset_top = 97.0
offset_right = 565.0
offset_bottom = 154.0
text = "Name"

[node name="NameEdit" type="TextEdit" parent="SQLiteTest"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 564.0
offset_top = 99.0
offset_right = 890.0
offset_bottom = 165.0

[node name="Score" type="Label" parent="SQLiteTest"]
layout_mode = 0
offset_left = 452.0
offset_top = 225.0
offset_right = 554.0
offset_bottom = 282.0
text = "Score"

[node name="ScoreEdit" type="TextEdit" parent="SQLiteTest"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 553.0
offset_top = 227.0
offset_right = 879.0
offset_bottom = 293.0

[connection signal="button_down" from="SQLiteTest/CreateTable" to="SQLiteTest" method="_on_create_table_button_down"]
[connection signal="button_down" from="SQLiteTest/InsertData" to="SQLiteTest" method="_on_insert_data_button_down"]
[connection signal="button_down" from="SQLiteTest/SelectData" to="SQLiteTest" method="_on_select_data_button_down"]
[connection signal="button_down" from="SQLiteTest/UpdateData" to="SQLiteTest" method="_on_update_data_button_down"]
[connection signal="button_down" from="SQLiteTest/DeleteData" to="SQLiteTest" method="_on_delete_data_button_down"]
[connection signal="button_down" from="SQLiteTest/CustomSelect" to="SQLiteTest" method="_on_custom_select_button_down"]
